# a2ui-concierge

./: .gitignore  README.md
app/app/: build.gradle.kts
app/app/src/main/assets/: a2ui-host.js
app/app/src/main/kotlin/com/diegoz/a2uiconcierge/: MainActivity.kt
app/app/src/main/kotlin/com/diegoz/a2uiconcierge/a2ui/: A2uiBridge.kt  ThemeTokens.kt
app/app/src/main/kotlin/com/diegoz/a2uiconcierge/theme/: Theme.kt  Type.kt
app/app/src/main/kotlin/com/diegoz/a2uiconcierge/ui/: AgentA2uiBubble.kt  AgentTextBubble.kt  ChatScreen.kt  ChatViewModel.kt  InputRow.kt  ThinkingDots.kt
app/app/src/main/kotlin/com/diegoz/a2uiconcierge/x402/: X402Signer.kt
app/app/src/test/kotlin/com/diegoz/a2uiconcierge/ui/: ChatViewModelTest.kt
app/shared/src/commonMain/composeResources/files/: a2ui-host.js
backend/: pyproject.toml
backend/src/concierge/: a2ui.py  agent.py  app.py  catalog.json  catalog.py  payments.py  prompts.py  tools.py
backend/tests/: test_a2ui.py  test_app.py  test_catalog.py  test_tools.py
backend/tests/fixtures/: a2ui_chips.json  a2ui_confirmation.json  a2ui_form.json  a2ui_product_detail.json  a2ui_products.json
docs/: a2ui-shapes.md  runbook.md  smoke-checklist.md
docs/superpowers/plans/: 2026-05-07-a2ui-android-shopping-demo.md
docs/superpowers/specs/: 2026-05-07-a2ui-android-shopping-demo-design.md
host-bundle/: index.html  package-lock.json  vite.config.js
host-bundle/src/: shim.js
host-bundle/src/components/: chip-group.js  concierge-form.js  confirmation-card.js  payment-challenge.js  product-detail.js  tx-detail.js
(+2 files in other folders)
